# -

./: .gitignore  README.md  pyproject.toml  run.py
api/: app.py  query_engine.py
conf/: lm_config.py  mineru_config.py  minio_config.py
processor/: __init__.py
processor/import_process/: base.py  config.py  exceptions.py  main_graph.py  state.py
processor/import_process/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
processor/query_processor/: base.py
processor/query_processor/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
static/: index.html
test/: bge_m3测试向量获取.py  fastapi_test.py  test.py
test/fastapi_sse/: sse.html  sse.py
tool/: json_format_utils.py
utils/: embedding_utils.py  json_format_utils.py  llm_utils.py  milvus_utils.py  minio_utils.py  reranker_http_utils.py
